src/scss/_archive.scss
daypicker {
  th {
    color: white;
  }

  .btn-default.active {
    background-color: $brand-primary !important;
  }
}

sd-shows {
  #show_query {
    margin-bottom: 5px;
  }
}

sd-broadcasts-show, sd-broadcasts-date {
  display: block;
  margin-bottom: 110px;
}

sd-broadcasts-date {

  .tablet {
    display: none
  }

  @media (min-width: 565px) {
    .mobile {
      display: none;
    }

    .tablet {
      display: initial;
    }
  }
}

sd-broadcasts-show {

  .details {
    white-space: pre-line;
    padding-bottom: $padding-large-vertical;
  }

}

sd-broadcast {

  .list-group-item {
    border: 0;
    padding: 0;

    &.title {
      font-size: 16px;
    }

    &:before {
      content: "";
      position: absolute;
      left: 1.25%;
      bottom: 0;
      height: 1px;
      width: 97.5%;
      border-bottom: 1px solid #ddd;
    }
  }

  &:last-child .list-group-item:before {
    border-bottom: none;
    height: 0px;
  }

  .list-group-item-heading {
    margin-bottom: 0;
    padding: 10px 15px;

    &> a {
      color: #000;
      text-decoration: none;
    }
  }

  .list-group-item-text {
    padding: 0px 15px 10px 15px + $padding-base-horizontal;
    max-height: 300px;
    overflow-y: auto;

    &.fixclear:before, &.fixclear:after {
      content: " ";
      display: table;
    }
    &.fixclear:after {
      clear: right;
    }

    p:last-child {
      margin-bottom: 0px;
    }

    table {
      margin-bottom: 10px;
    }

    .table-condensed  tr > td {
      padding-top: 0;
      padding-bottom: 0;
    }

    .placeholder {
      margin-bottom: 10px;
      padding-left: 10px;
      min-width: 60px;
      text-align: center;
    }
  }

  .details {
    white-space: pre-line;
    padding-bottom: 0;
  }

  form {
    margin-bottom: 10px;
  }

  textarea {
    margin-bottom: 5px;
  }

  .broadcast-date, .broadcast-date {
    margin-right: $padding-base-horizontal;
    text-align: right;
    display: inline-block;
  }

  .view-day {
    .list-group-item-heading {
      padding-left: 131px;
      text-indent: -116px;

      .pull-right {
        text-indent: 0;
      }
    }

    .broadcast-date {
      min-width: 100px;
    }
  }

  .view-month {
    .list-group-item-heading {
      padding-left: 201px;
      text-indent: -186px;

      .pull-right {
        text-indent: 0;
      }
    }

    .broadcast-date {
      min-width: 170px;
    }
  }

  .tracklist {
    padding-left: 0;

    li {
      list-style: none;
      padding-left: 48px;
    }

    .track-time {
      display: inline-block;
      margin-right: 10px;
      margin-left: -48px;
    }

    .glyphicon {
      display: none;
    }

    a:hover, a.active {
      .glyphicon {
        color: $link-hover-color;
        display: inline-block;
        margin-right: 5px;
        margin-left: -67px;
      }

      .track-time {
        margin-left: 0;
      }
    }

    &.non-playable {
      a {
        color: inherit;
        font-weight: inherit;
        cursor: inherit;
      }

      a:hover {
        text-decoration: none;
      }

      a:hover {
        .glyphicon {
          display: none;
        }

        .track-time {
          margin-left: -48px;
        }
      }
    }

  }

}

.loading {
  color: $brand-disabled;

  sd-broadcast {
    .list-group-item-heading {
      &> a {
        color: $brand-disabled;
      }
    }
  }
}

.access-denied {
  &.title {
    color: $brand-no-access;

    a {
      color: $brand-no-access;
    }

    .glyphicon {
      color: $brand-disabled;
    }
  }
}

